<resources>
    <string name="app_name">GetMoving</string>
    <string name="profileHeader">Profile</string>
    <string name="todo">TODO</string>
    <string name="weathermessage">Description</string>
    <string name="age">Age: 26</string>
    <string name="user_name">Name: Bobby</string>
    <string name="email"> Email </string>
    <string name="password"> Password</string>
    <string name="login">Login</string>
    <string name="newUser">Create new user</string>
    <string name="getmovingLeaderboard">Global Leaderboard</string>
    <string name="bt_back">Back</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="temp_xy">Temp: 21C</string>
    <string name="weather_message">Clear sky</string>
    <string name="btn_leaderboard">LeaderBoards</string>
    <string name="city">City: Aarhus</string>
    <string name="steps_today">Steps today:</string>
    <string name="total_steps_1_000_000_000_000_000">Total steps: 1.000.000.000.000.000</string>
    <string name="daily_goal">My daily goal:</string>
    <string name="_10_000">10.000</string>
    <string name="add_photo">Add photo</string>
    <string name="daily_steps">Daily steps</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="save">save</string>
    <string name="_32">32</string>
    <string name="hint_aarhus">Aarhus</string>
    <string name="hint_bobby">Bobby</string>
    <string name="great_weather_today">Cloudy</string>
    <string name="_1000000">1000000</string>
    <string name="edit_user_profil">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Edit profile</string>
    <string name="update">Update</string>
    <string name="newphoto">Add new profile picture</string>
    <string name="bobby_olsen">Bobby Olsen</string>
    <string name="feels_like">Feels like</string>
    <string name="humid">Humid</string>
    <string name="followers_0">Followers: 0</string>

    <string name="missing_fields">One or more fields are empty.</string>
    <string name="profile_updated">Profile updated</string>
    <string name="user_updated">User is updated</string>
    <string name="img_uploaded">Image is uploaded</string>
    <string name="failed_img_upload">Failed to upload image</string>
    <string name="total_steps">"Total steps: "</string>
    <string name="followers">"Followers:  "</string>
    <string name="wins">"Wins: "</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length">Password must be >= 6 characters</string>
    <string name="logged_in_succes">Logged in succesfully</string>
    <string name="user_created">User Created</string>
    <string name="goal_reached">"You reached the daily goal of "</string>
    <string name="steps">steps!</string>
    <string name="Service_live">Service is live</string>
    <string name="permisson_needed">"GetMoving needs your permission to use activity sensor and storage "</string>
    <string name="photo_permission">Please Grant Permissions to upload profile photo</string>
    <string name="enable">ENABLE</string>
    <string name="temp">"Temp: "</string>
    <string name="description">"Desciption: "</string>
    <string name="you_got_the_lead">You got the lead!</string>
</resources>
